--- a/client/views/sidebar-content.html
+++ b/client/views/sidebar-content.html
@@ -1,12 +1,32 @@
 <ul>
   <li sd-tooltip="Dashboard" flow="right">
-    <a href="#/publisher" class="sd-sidebar-menu__btn" ng-class="{'sd-sidebar-menu__btn--active': superdesk.currentRoute.href === '/publisher'}">
+    <a
+      href="#/publisher"
+      class="sd-sidebar-menu__btn"
+      ng-class="{'sd-sidebar-menu__btn--active': superdesk.currentRoute.href === '/publisher'}"
+    >
       <i class="sd-sidebar-menu__main-icon big-icon--dashboard-alt"></i>
     </a>
   </li>
   <li sd-tooltip="Output Control" flow="right">
-    <a href="#/publisher/output-control" class="sd-sidebar-menu__btn" ng-class="{'sd-sidebar-menu__btn--active': superdesk.currentRoute.href === '/publisher/output-control'}">
+    <a
+      href="#/publisher/output-control"
+      class="sd-sidebar-menu__btn"
+      ng-class="{'sd-sidebar-menu__btn--active': superdesk.currentRoute.href === '/publisher/output-control'}"
+    >
       <i class="sd-sidebar-menu__main-icon big-icon--web"></i>
+    </a>
+  </li>
+  <li sd-tooltip="Error Log" flow="right">
+    <a
+      href="#/publisher/error-log"
+      class="sd-sidebar-menu__btn"
+      ng-class="{'sd-sidebar-menu__btn--active': superdesk.currentRoute.href === '/publisher/error-log'}"
+    >
+      <i
+        class="sd-sidebar-menu__main-icon icon-warning-sign"
+        style="font-size: 22px; line-height: 21px; left: 0.7rem"
+      ></i>
     </a>
   </li>
 </ul>
