--- a/client/views/settings/rules/rule-add-organization.html
+++ b/client/views/settings/rules/rule-add-organization.html
@@ -41,7 +41,7 @@
 						</select>
 					</div>
 				</div>
-				<div class="form__row-item" ng-if="expression.option.name != 'Category'">
+				<div class="form__row-item" ng-if="expression.option.name != 'Category' && expression.option.name != 'Author' && expression.option.name != 'Language' ">
 					<div class="sd-line-input margin--bottom0">
 						<input class="sd-line-input__input" type="text" ng-model="expression.value" ng-disabled="!expression.operator" required>
 					</div>
@@ -57,6 +57,28 @@
 						</select>
 					</div>
 				</div>
+				<div class="form__row-item" ng-if="expression.option.name == 'Author'">
+					<div class="sd-line-input sd-line-input--is-select margin--bottom0">
+							<select class="sd-line-input__select"
+									required
+									ng-disabled="!expression.operator"
+									ng-model="expression.value"
+									">
+									<option ng-repeat="author in webPublisherSettings.authors" value="{{author.display_name}}">{{author.display_name}}</option>
+							</select>
+					</div>
+			</div>
+			<div class="form__row-item" ng-if="expression.option.name == 'Language'">
+				<div class="sd-line-input sd-line-input--is-select margin--bottom0">
+						<select class="sd-line-input__select"
+								required
+								ng-disabled="!expression.operator"
+								ng-model="expression.value"
+								">
+								<option ng-repeat="lang in webPublisherSettings.languages" value="{{lang.qcode}}">{{lang.name}}</option>
+						</select>
+					</div>
+			</div>
 				<div class="form__row-item form__row-item--no-grow">
 					<i class="icon-trash cursorPointer"
 					ng-click="webPublisherSettings.removeRuleExpression($index)"
