--- a/client/views/settings/rules/rule-add-tenant.html
+++ b/client/views/settings/rules/rule-add-tenant.html
@@ -51,7 +51,7 @@
                     </select>
                 </div>
             </div>
-            <div class="form__row-item" ng-if="expression.option.name !== 'Category' && expression.option.name !== 'Author'">
+            <div class="form__row-item" ng-if="expression.option.name !== 'Category' && expression.option.name !== 'Author' && expression.option.name !== 'Language' ">
                 <div class="sd-line-input margin--bottom0">
                     <input class="sd-line-input__input" type="text" ng-model="expression.value" ng-disabled="!expression.operator" required>
                 </div>
@@ -78,6 +78,17 @@
                     </select>
                 </div>
             </div>
+            <div class="form__row-item" ng-if="expression.option.name == 'Language'">
+				<div class="sd-line-input sd-line-input--is-select margin--bottom0">
+						<select class="sd-line-input__select"
+								required
+								ng-disabled="!expression.operator"
+								ng-model="expression.value"
+								">
+								<option ng-repeat="lang in webPublisherSettings.languages" value="{{lang.qcode}}">{{lang.name}}</option>
+						</select>
+					</div>
+			</div>
             <div class="form__row-item form__row-item--no-grow">
                 <i class="icon-trash cursorPointer"
                 ng-click="webPublisherSettings.removeRuleExpression($index)"
