--- a/client/views/settings/website-management/navigation/index.html
+++ b/client/views/settings/website-management/navigation/index.html
@@ -43,12 +43,14 @@
           <button
             ng-click="webPublisherSettings.cancelEditMenuCard()"
             class="icn-btn"
+            style="margin-top: .9em"
           >
             <i class="icon-close-small"></i>
           </button>
           <button
             ng-click="webPublisherSettings.saveMenu(webPublisherSettings._refreshMenus)"
             class="icn-btn"
+            style="margin-top: .9em"
           >
             <i class="icon-ok"></i>
           </button>
