--- a/client/views/settings/website-management/partials/routes-tree.html
+++ b/client/views/settings/website-management/partials/routes-tree.html
@@ -16,7 +16,7 @@
   </button>
   <div class="listElement__icon">
     <i
-      ng-class="{'icon-align-justify': route.type == 'collection', 'icon-text': route.type == 'content'}"
+      ng-class="{'icon-align-justify': route.type == 'collection', 'icon-text': route.type == 'content', 'icon-code': route.type == 'custom' }"
     ></i>
   </div>
   <div class="listElement__content">
