--- a/client/views/settings/rules/rule-add-organization.html
+++ b/client/views/settings/rules/rule-add-organization.html
@@ -30,7 +30,7 @@
 						</select>
 					</div>
 				</div>
-				<div class="form__row-item">
+				<div class="form__row-item sd-flex-no-grow" style="min-width: 40px;">
 					<div class="sd-line-input sd-line-input--is-select margin--bottom0">
 						<select class="sd-line-input__select"
 							required
