allow setting parent of custom menu item

--- a/client/views/settings/website-management/navigation/menu.html
+++ b/client/views/settings/website-management/navigation/menu.html
@@ -110,10 +110,7 @@
                   </select>
                 </div>
 
-                <div
-                  class="item"
-                  ng-if="newMenu.route && !webPublisherSettings.isRouteTypeCustom(newMenu.route)"
-                >
+                <div class="item">
                   <label for="menuParent" translate>parent</label>
                   <select
                     id="menuParent"
